refactor: remove UserDetailsServiceConfig and simplify model classes
Deleted UserDetailsServiceConfig as it was no longer needed. Updated model classes (LoginResponse, TokenValidationRequest, UserRegistrationRequest) to use Lombok for getter and setter methods, reducing boilerplate code. Adjusted ClinicInformation and DoctorInformation to correct JSON formatting. Enhanced QueueSlotController and QueueSlotCreationServiceImpl for improved readability and functionality.